1.2 (2011-04-30)
----------------

- Eggified.

- Made compatible with Plone 3 and CompositePage from svn.zope.org.
  Plone 3+ is now required.
  [hathawsh]

- At the end of _initObjects update the kupu library, so composables
  are registered correctly there.
  [jladage,maurits]

- Added the topic view to the profile, since that was allready expected
  in the tests. All tests are passing again.
  [jladage]

- Bugfix roundtrip import/export didn't work correctly because of
  the use of different filenames. The export creates a composite_tool.xml
  and the import expected compositetool.xml. Thanks to Tres Seaver for
  reporting this bug and providing a patch. A deprecation warning will be
  logged in case compositetool.xml is still used in existing profiles
  [jladage]

- Fix bug in reinstall which removed the composables from kupu.
  [ree]

- Added compopack_template_azax layer to the skins which gets added in the
  correct order, in case azax is installed.
  [jslob]

- Removed the ++resource++ code from the layout templates which were generating
  at least 4 404's per request.
  [jladage]

- Added ResourceRegistry config for all js and css. Moved the skins files
  to a few skindirs as done in the azax-ree branch. And off course add
  GenericSetup profiles for the js and css.
  [jladage]

- Fixed the renaming issue by inheriting from BaseFolder and implement the
  INonStructuralFolder interface.
  [jladage and jorisslob]

- Added GenericSetup base profile for configuring the composite_tool. You can
  now import and export the entire configuration in XML.
  [jladage and jorisslob]

- changed tool.py to handle multiple users messing with the same 
  navigation page. Some sanity checks were added and neat error messages
  will be sent to users when things go wrong
  [jslob and maurits]

- fix css to do better layer handling (position: relative was elements to
  be rendered over the plone drop down menus)
  [jslob and mteulingen]
